# hikvision-viewer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20250107115346_initial.sql  20250107174429_create_thumbnail_images.sql
src/: cleanup.rs  isapi.rs  main.rs  thumbnails.rs
