[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
diqwest = "3.1.0"
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["io"] }
reqwest = { version = "0.12.9", features = ["stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
uuid = { version = "1.11.0", features = ["v4"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
regex = "1.11.1"
